--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 management.endpoints.web.exposure.include=info,health
 management.endpoint.health.probes.enabled=true
+
+
+services.discovery-path=/api/discovery
+services.bookhunter-host=localhost
+services.bookhunter-port=8080
+services.bookshelf-host=localhost
+services.bookshelf-port=8090
