--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@ management.endpoints.web.exposure.include=info,health
 management.endpoint.health.probes.enabled=true
 server.port=8070
 
+services.liveliness=/system/livelines
+services.version=/system/version
+
 services.services.bookhunter.host=localhost
 services.services.bookhunter.port=8080
-services.services.bookhunter.liveliness=/system/livelines
-services.services.bookhunter.version=/system/version
 
 services.services.bookshelf.host=localhost
 services.services.bookshelf.port=8090
-services.services.bookshelf.liveliness=/system/livelines
-services.services.bookshelf.version=/system/version
