--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-management.endpoints.web.exposure.include=info,health
-management.endpoint.health.probes.enabled=true
-server.port=8070
-services.liveliness=/system/livelines
-services.version=/system/version
-services.services.bookhunter.host=localhost
-services.services.bookhunter.port=8080
-services.services.bookshelf.host=localhost
-services.services.bookshelf.port=8090
+spring.profiles.active=dev
